# tips-prompt-manager

./: .gitattributes  .gitignore  AGENTS.md  PromptManager.pyw  README.md  README.txt  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt  启动提示词管理器.bat
docs/: open-source-audit.md
resources/: version_info.txt
scripts/: build.ps1  entry_prompt_manager.py
src/tips_prompt_manager/: __init__.py  app.py  auth.py  i18n.py  meta.py  paths.py  storage.py
tests/: run_ui_smoke.ps1  test_auth.py  test_i18n.py  test_storage.py
